--- a/election/package.json
+++ b/election/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "mono",
+  "name": "election",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "node": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [
     "node",
@@ -22,7 +23,6 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "mongoose": "^7.2.2"
   }
 }
